# ctunnel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  THREAT_MODEL.md  Untitled
apps/anchor-demo/: Cargo.toml
apps/anchor-demo/src/: main.rs
apps/ctunnel/: Cargo.toml
apps/ctunnel/src/: main.rs
crates/anchor/: Cargo.toml
crates/anchor/src/: conn.rs  error.rs  identity.rs  lib.rs  listener.rs  trust.rs
crates/anchor/tests/: embed_smoke.rs
crates/ctunnel-core/: Cargo.toml
crates/ctunnel-core/src/: error.rs  lib.rs  lib_tests.rs
crates/ctunnel-core/src/channel/: aead.rs  codec_tests.rs  mod.rs  phase4_tests.rs  traits.rs  types.rs
crates/ctunnel-core/src/crypto/: mod.rs  traits.rs  types.rs
crates/ctunnel-core/src/framing/: length_prefixed.rs  length_prefixex_tests.rs  mod.rs  traits.rs  types.rs
crates/ctunnel-core/src/handshake/: client.rs  convert.rs  kdf.rs  mod.rs  phase3_scaffold_tests.rs  phase3_step2_tests.rs  phase3_step3_tests.rs  policy.rs  server.rs  test_crypto.rs  traits.rs  transcript.rs  types.rs
crates/ctunnel-core/src/protocol/: codec_tests.rs  mod.rs  types.rs
crates/ctunnel-crypto-sodium/: Cargo.toml
crates/ctunnel-crypto-sodium/src/: lib.rs  tests.rs
crates/ctunnel-crypto-sodium/src/sodium/: ffi.rs  mod.rs  safe.rs
crates/ctunnel-net-tokio/: Cargo.toml
crates/ctunnel-net-tokio/src/: conn.rs  error.rs  lib.rs
crates/ctunnel-net-tokio/tests/: tcp_integration.rs
keys/: client.key  client.pub  server.key  server.pub
tools/: handshake_capture.json  mitm_proxy_record.py  mitm_proxy_recordlayer_attack.py  mitm_proxy_tamper.py  replay_handshake.py
