[package]
name = "anchor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ctunnel-core = { path = "../ctunnel-core" }
ctunnel-net-tokio = { path = "../ctunnel-net-tokio" }
ctunnel-crypto-sodium = { path = "../ctunnel-crypto-sodium" }

tokio = { version = "1", features = ["net", "rt", "macros"] }
thiserror = "2"
anyhow = "1"
hex = "0.4"