[package]
name = "ctunnel-net-tokio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ctunnel-core = { path = "../ctunnel-core" }
ctunnel-crypto-sodium = { path = "../ctunnel-crypto-sodium" }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }
async-trait = "0.1"